--- a/PizzaShopWebApp/Pages/Dashboard/Order.cshtml
+++ b/PizzaShopWebApp/Pages/Dashboard/Order.cshtml
@@ -1,5 +1,5 @@
 @page
-@model PizzaShopWebApp.Pages.Dashboard.OrderModel
+@model PizzaShopWebApp.Pages.Dashboard.OrderPageModel
 @{
     ViewData["Title"] = "Order Food";
     Layout = "_DashboardLayout";
